# ArbiSecure

./: .env.example  .gitignore  README.md  message-2.txt  package-lock.json  start-anvil.sh
.github/: BRANCH_PROTECTION.md  branch-protection.json
backend/: demo_test.mjs  fund_arbiter.mjs  hardhat.config.ts  inspect_deals.mjs  package-lock.json  package.json  tsconfig.json  verify_3_milestones.mjs  verify_early_release.mjs  verify_status.mjs
backend/artifacts/contracts/IArbiSecure.sol/: IArbiSecure.json  (+1 more)
backend/cache/: solidity-files-cache.json
backend/contracts/: IArbiSecure.sol
backend/test/: integration.test.ts
backend/typechain-types/: IArbiSecure.ts  hardhat.d.ts  index.ts
backend/typechain-types/factories/: IArbiSecure__factory.ts  index.ts
contracts/: Cargo.toml  README.md  Stylus.toml  contract_abi.json
contracts/arbiter-registry/: Cargo.toml
contracts/arbiter-registry/src/: lib.rs  main.rs
contracts/src/: lib.rs  main.rs
contracts/tests/: integration.rs
docs/: DEAL_LINKS.md  QUICK_TEST.md  README.md  SETUP.md  TESTING_GUIDE.md  WALLET_SETUP.md  demo_script.md  pages.md  prd.md  progress_report.md
docs/specs/: create_deal_ux.md
frontend/: README.md  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx  template.tsx
frontend/app/create/: page.tsx
frontend/app/dashboard/: layout.tsx  page.tsx
frontend/app/testing/: page.tsx
frontend/components/: DevTools.tsx  LandingPage.tsx  createdealform.tsx  gasCostDisplay.tsx  header.tsx  providers.tsx  savingsComparison.tsx  transactionSuccessModal.tsx  walletDropdown.tsx
frontend/components/animations/: FadeIn.tsx  TextReveal.tsx  Transition.tsx  TransitionLink.tsx  WhiteCurtainLoader.tsx
frontend/components/create/: ConditionConfigurator.tsx  CreateDealWizard.tsx  GlassInput.tsx  MilestoneBuilder.tsx
frontend/components/dashboard/: DealsDashboard.tsx
frontend/components/deal/: DealReviewUI.tsx  DealReviewUI.tsx.bak  DisputeForm.tsx  DisputeView.tsx
frontend/components/landing/: CryptoCards.tsx  FeaturesSection.tsx  FeesSection.tsx  HeroSection.tsx  HowItWorksSection.tsx  LandingFooter.tsx  LandingHeader.tsx  MissionSection.tsx  ProjectListSection.tsx  SecuritySection.tsx  ServicesSection.tsx  ShowcaseSection.tsx  Ticker.tsx
frontend/components/ui/: Button.tsx  InfoCard.tsx  StatusBadge.tsx  StatusMessage.tsx  index.ts
frontend/lib/: abi.ts  gasCalculations.ts  supabase.ts  types.ts  validation.ts  wagmi.ts
frontend/scripts/: analyze_create_tx.ts  analyze_latest_deal.ts  analyze_tx.ts  check_contract.ts  check_contract_status.ts  check_db_deal_4.ts  check_deal_0.ts  check_deal_1.ts  check_deal_2.ts  check_deal_status_issue.ts  check_init.ts  find_deals.ts  init_contract.ts  initialize_contract.ts  list_deals.ts  test_complete_flow.ts  test_create_deal.ts  test_milestones.ts  test_release.ts  verify_deal_4.ts  verify_deal_creation.ts  verify_new_contract.ts
frontend/supabase/migrations/: add_client_milestones.sql  add_disputed_status.sql  create_disputes_table.sql
scripts/: deploy.sh  deploy_local.sh  tsconfig.json
template/: landing-page.html
(+15 files in other folders)
