[package]
name = "arbisecure-escrow"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
stylus-sdk = "0.6"
alloy-primitives = "0.8"
alloy-sol-types = "0.8"

[dev-dependencies]
tokio = { version = "1.12.0", features = ["full"] }
ethers = "2.0.0"

[features]
export-abi = ["stylus-sdk/export-abi"]

[[bin]]
name = "arbisecure-escrow"
path = "src/main.rs"

[profile.release]
codegen-units = 1
strip = true
lto = true
panic = "abort"
opt-level = "s"

[patch.crates-io]
ruint = { version = "=1.12.3" }
