[package]
name = "arbisecure-escrow"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
stylus-sdk = "=0.5.0"
stylus-proc = "=0.5.0"
ws_stream_wasm = "=0.7.4"
wit-bindgen = "=0.49.0"
base64ct = { version = "=1.6.0", features = ["alloc"] }
ruint = "=1.12.3"

[features]
export-abi = ["stylus-sdk/export-abi"]



[[bin]]
name = "arbisecure-escrow"
path = "src/lib.rs"

[profile.release]
codegen-units = 1
strip = true
lto = true
panic = "abort"
opt-level = "s"
