[package]
name = "arbiter-registry"
version = "0.1.0"
edition = "2021"
license = "MIT"
keywords = ["arbitrum", "ethereum", "stylus", "alloy"]

[dependencies]
alloy-primitives = { version = "=0.8.20", default-features = false }
alloy-sol-types = { version = "=0.8.20", default-features = false }
stylus-sdk = { version = "0.9.0", default-features = false }
hex = "0.4.3"

[dev-dependencies]
tokio = { version = "1.12.0", features = ["full"] }
ethers = "2.0"

[features]
default = ["mini-alloc"]
export-abi = ["stylus-sdk/export-abi"]
mini-alloc = ["stylus-sdk/mini-alloc"]

[lib]
crate-type = ["lib", "cdylib"]

[profile.release]
codegen-units = 1
strip = true
lto = "fat"
panic = "abort"
opt-level = "s"
overflow-checks = false

[profile.release.package."*"]
opt-level = "s"
